add stream api to streamcontent
